fix: update registry and repository URLs to use GitHub

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 legacy-peer-deps=true
 package-lock=true
-registry=https://npm.rankingcoach.com/
+registry=https://registry.npmjs.org/
 loglevel=info
